Fixed failing image name in dockerhub

--- a/infra/k8s/client-depl.yaml
+++ b/infra/k8s/client-depl.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: client
-          image: nakuls003/ticketing-client
+          image: nakuls003/client
 ---
 apiVersion: v1
 kind: Service
